--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "server": "nodemon server.js",
     "client": "cd client && npm start",
-    "dev":
-      "concurrently --names \"server,client\" \"npm run server --silent\" \"npm run client --silent\""
+    "dev": "concurrently --names \"server,client\" \"npm run server --silent\" \"npm run client --silent\""
   },
   "author": "",
   "license": "ISC",
@@ -17,8 +16,10 @@
     "body-parser": "^1.18.3",
     "concurrently": "^3.5.1",
     "cors": "^2.8.4",
+    "create-react-app": "^3.4.1",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "global": "^4.4.0",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.2",
     "jsonwebtoken": "^8.2.1",
